--- a/axum_openapi_derive/Cargo.toml
+++ b/axum_openapi_derive/Cargo.toml
@@ -8,5 +8,12 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0"
-syn = "1.0"
+syn = { version = "1.0", features = ["full"] }
 proc-macro2 = "1.0"
+
+regex = { version = "1.5", default-features = false, features = ["std", "unicode-perl"] }
+once_cell = "1.8"
+
+[dev-dependencies]
+syn = { version = "1.0", features = ["full", "extra-traits"] }
+pretty_assertions = "0.7"
