--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,18 @@ edition = "2018"
 default = ["skip_serializing_defaults"]
 skip_serializing_defaults = ["openapiv3/skip_serializing_defaults"]
 
+macro-based = ["inventory", "once_cell", "axum_openapi_derive/macro-based"]
+
 [dependencies]
 openapiv3 = "0.5"
-inventory = "0.1"
 
 axum = "0.1"
 serde = "1.0"
 hyper = "0.14"
 serde_yaml = "0.8"
-once_cell = "1.0"
+
+inventory = { version = "0.1", optional = true }
+once_cell = { version = "1.0", optional = true }
 
 axum_openapi_derive = { path = "./axum_openapi_derive" }
 
