--- a/axum_openapi_derive/Cargo.toml
+++ b/axum_openapi_derive/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[features]
+macro-based = []
+
 [dependencies]
 quote = "1.0"
 syn = { version = "1.0", features = ["full"] }
